--- a/org-css.css
+++ b/org-css.css
@@ -1,20 +1,33 @@
+:root {
+    --title-color: #348781;
+}
 h1, h2, h3, h4 {
   color: #222;
-  padding: 5px;
+  padding: 15px;
   font-family: sans-serif;
-  background-color: coral;
+  background-color: white;
+  height: 30px;
   border-radius: 5px;
+  border-bottom: 5px solid var(--title-color);
+  color: var(--title-color);
   position: sticky;
   top: 0;
+  z-index: 100;
+  vertical-align: middle;
+}
+a {
+    padding: 2px;
+    text-decoration: none;
+    color: darkslateblue;
+    transition: background-color 1s color 1s;
+}
+a:hover {
+    background-color: darkslateblue;
+    color: white;
 }
 body {
   size: 80%;
   margin: 5%;
-}
-
-table {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .org-src-container > pre {
@@ -23,16 +36,17 @@ table {
  background-color: #222;
  color: #eee;
 }
-table {
-  border: none;
-}
+
 th {
- background-color: DarkSlateGrey;
- color: #eee;
+    background-color: var(--title-color);
+    color: #eee;
 }
 tr:nth-child(even) {
- background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 table {
- border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+    border: hidden;
 }
