--- a/org-presentation.css
+++ b/org-presentation.css
@@ -141,6 +141,10 @@ tr:nth-child(odd) {
     /* background-color: var(--fou-color); */
     background-color: white;
 }
+tr:last-child {
+    background-color: lightsalmon;
+}
+
 table {
     margin-left: auto;
     margin-right: auto;
